styles for page, still have an issue with education not showing up on edit view

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -80,6 +80,18 @@ i {
   border: none;
 }
 
+.opt-btn-prof.edit {
+  margin-left:-15px;
+}
+
+.first-row {
+  margin-top: 60px;
+}
+
+.prof-top {
+  float:left;
+}
+
 .edit {
   margin-right: 20px;
 }
@@ -303,6 +315,13 @@ a.pillar-link {
   margin-left:25px;
 }
 
+.prof-bottom-wrapper.special {
+  margin-top: 20px;
+}
+
+.prof-row {
+  margin-left:-30px;
+}
 .prof-column {
   margin-left: 0px;
     margin-right: -30px;
